# command-line-rust

./: Cargo.toml
src/catr/: catr.rs  test.txt
src/echor/: echor.rs
src/findr/: findr.rs
src/findr/expects/: default.txt  dir.txt  file.txt  link.txt  multiple_inputs.txt  multiple_names.txt  multiple_type.txt  name.txt
src/findr/inputs/: g.csv
src/findr/inputs/a/b/: b.csv
src/headr/: headr.rs
src/uniqr/: uniqr.rs
src/uniqr/inputs/: default.txt
src/wcr/: wcr.rs
src/wcr/inputs/multiple/: first.txt  second.txt
