[package]
name = "command-line-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echor"
path = "src/echor/echor.rs"

[[bin]]
name = "catr"
path = "src/catr/catr.rs"

[[bin]]
name = "headr"
path = "src/headr/headr.rs"

[dependencies]
assert_cmd = "2.0.13"
clap = { version = "4.5.0", features = ["derive"] }
predicates = "3.1.0"
